# moros

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain  rust-toolchain.toml
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
doc/: calculator.md  colors.md  devices.md  editor.md  filesystem.md  games.md  hardware.md  index.md  lisp.md  manual.md  net.md  network.md  regex.md  shell.md  syscalls.md
dsk/cfg/: banner.txt  boot.sh  passwords.csv
dsk/ini/: banner.txt  boot.sh  lib.lsp  lisp.lsp  palette.csv  passwords.csv  shell.sh  version.txt
dsk/ini/fonts/: zap-light-8x16.psf
dsk/ini/lisp/: core.lsp
dsk/ini/palettes/: default.sh  gruvbox-dark.csv  gruvbox-dark.sh  gruvbox-light.csv  gruvbox-light.sh
dsk/lib/lisp/: alias.lsp  core.lsp  file.lsp  legacy.lsp  math.lsp
dsk/tmp/: alice.txt  fib.ls  fibonacci.lisp  machines.txt  roads.txt
dsk/tmp/beep/: mario.sh  starwars.sh  tetris.sh
dsk/tmp/chess/: mi2.epd  mi3.epd  mi4.epd  puru.epd
dsk/tmp/life/: centinal.cells  flower-of-eden.cells  garden-of-eden.cells  glider-gun.cells  p28-gun.cells  p46-gun.cells  pentadecathlon.cells  queen-bee-shuttle.cells  ship-in-a-bottle.cells  thunderbird.cells  wing.cells
dsk/tmp/lisp/: colors.lsp  doc.lsp  factorial.lsp  fetch.lsp  fibonacci.lsp  geotime.lsp  ntp.lsp  pi.lsp  sum.lsp  tak.lsp
dsk/var/pkg/: beep  blank  browse  chess  exec  fetch  fonts  geocal  geodate  hello  index.html  life  lisp  mandelbrot  texts
dsk/var/www/: index.html  moros.css
run/: bochs.rc  bochs.sh  cool-retro-term.json  cool-retro-term.sh  moros-fuse.py  moros-fuse.sh  pkg-server.sh  screenshot.sh  virtualbox.sh
src/: interrupts.rs  lib.rs  main.rs  shell.rs  string.rs  vga.rs
src/api/: allocator.rs  base64.rs  bin.rs  clock.rs  console.rs  font.rs  fs.rs  io.rs  mod.rs  power.rs  process.rs  prompt.rs  random.rs  regex.rs  rng.rs  syscall.rs  time.rs  unit.rs
src/api/vga/: color.rs  color.rs.rej  mod.rs  palette.rs  palette.rs.rej
src/kernel/: acpi.rs  allocator.rs  ata.rs  ata_pio.rs  clock.rs  cmos.rs  console.rs  cpu.rs  fonts.rs  fs.rs  idt.rs  interrupts.rs  keyboard.rs  layouts.rs  mem.rs  mod.rs  pci.rs  pic.rs  process.rs  random.rs  rtl8139.rs  serial.rs  sleep.rs  syscall.rs  time.rs  vga.rs
src/kernel/fonts/: lat15-terminus-8x16.psf  mod.rs  psf.rs  zap-vga-8x16.psf
src/kernel/net/: mod.rs  pcnet.rs  rtl8139.rs
src/kernel/syscall/: mod.rs  number.rs  service.rs
src/sys/: acpi.rs  allocator.rs  ata.rs  clock.rs  cmos.rs  console.rs  cpu.rs  fs.rs  gdt.rs  idt.rs  keyboard.rs  log.rs  mem.rs  mod.rs  pci.rs  pic.rs  process.rs  random.rs  rng.rs  serial.rs  speaker.rs  time.rs  vga.rs
src/sys/clk/: boot.rs  cmos.rs  epoch.rs  mod.rs  rtc.rs  sleep.rs  sync.rs  timer.rs
src/sys/fs/: bitmap_block.rs  block.rs  block_bitmap.rs  block_device.rs  device.rs  dir.rs  dir_entry.rs  file.rs  mod.rs  read_dir.rs  super_block.rs  superblock.rs
src/sys/mem/: heap.rs  mod.rs  paging.rs  phys.rs
src/sys/net/: e1000.rs  gw.rs  ip.rs  mac.rs  mod.rs  pcnet.rs  rtl8139.rs  usage.rs
src/sys/net/nic/: e1000.rs  mod.rs  pcnet.rs  rtl8139.rs  virtio.rs
src/sys/net/socket/: mod.rs  tcp.rs  udp.rs
src/sys/syscall/: mod.rs  number.rs  service.rs
src/sys/vga/: buffer.rs  color.rs  font.rs  framebuffer.rs  mod.rs  palette.rs  screen.rs  writer.rs
src/user/: base64.rs  clear.rs  colors.rs  copy.rs  date.rs  delete.rs  dhcp.rs  disk.rs  editor.rs  env.rs  geotime.rs  halt.rs  help.rs  hex.rs  host.rs  http.rs  httpd.rs  install.rs  ip.rs  list.rs  login.rs  mkfs.rs  mod.rs  move.rs  net.rs  print.rs  read.rs  route.rs  shell.rs  sleep.rs  tcp.rs  uptime.rs  user.rs  vga.rs  write.rs
src/usr/: assembler.rs  base64.rs  beep.rs  blank.rs  calc.rs  chess.rs  clear.rs  colors.rs  copy.rs  date.rs  decode.rs  delete.rs  dhcp.rs  diff.rs  disk.rs  edit.rs  editor.rs  elf.rs  encode.rs  env.rs  find.rs  geodate.rs  geotime.rs  halt.rs  hash.rs  help.rs  hex.rs  host.rs  http.rs  httpd.rs  image.rs  install.rs  ip.rs  keyboard.rs  life.rs  lisp.rs  lisp2.rs  list.rs  mem.rs  memory.rs  (+21 more)
src/usr/lisp/: env.rs  eval.rs  expand.rs  mod.rs  number.rs  parse.rs  primitive.rs
www/: build.sh  calculator.html  colors.html  devices.html  editor.html  filesystem.html  games.html  hardware.html  index.html  lisp.html  manual.html  moros.css  moros.img  network.html  regex.html  shell.html  syscalls.html  test.html
