[package]
name = "moros"
description = "MOROS: Obscure Rust Operating System"
version = "0.7.1"
authors = ["Vincent Ollivier <v@vinc.cc>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vinc/moros"
readme = "README.md"
default-run = "moros"

[features]
default = ["video"]
video = []
serial = []

[dependencies]
acpi = "4.1.0"
aml = "0.16.1"
base64 = { version = "0.13.0", default-features = false }
bit_field = "0.10.0"
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
float-cmp = "0.9.0"
hmac = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libm = "0.2.2"
linked_list_allocator = "0.10.1"
littlewing = { version = "0.7.0", default-features = false }
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
object = { version = "0.29.0", default-features = false, features = ["read"] }
pbkdf2 = { version = "0.11.0", default-features = false }
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
rand = { version = "0.8.5", default-features = false }
rand_hc = "0.3.1"
raw-cpuid = "10.3.0"
sha2 = { version = "0.10.2", default-features = false, features = ["force-soft"] }
smoltcp = { version = "0.8.1", default-features = false, features = ["alloc", "medium-ethernet", "socket-tcp", "socket-udp", "socket-dhcpv4", "proto-ipv4", "proto-dhcpv4"] }
spin = "0.9.4"
time = { version = "0.2.27", default-features = false }
uart_16550 = "0.2.18"
vte = "0.11.0"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-success-exit-code = 33 # (0x10 << 1) | 1
